Spacing issues fixed for navbar.

--- a/cris/style.css
+++ b/cris/style.css
@@ -346,7 +346,8 @@ footer {
   background-color: rgba(0, 0, 0, 1.0);
   display: flex;
   height: 35px;
-  margin-top: 0px;
+  left: 0;
+  margin-top: 40px;
   position: fixed;
   width: 100%;
   z-index: 100;
@@ -392,7 +393,7 @@ footer {
   display: none;
   left: 0;
   position: absolute;
-  top: 20px; /* Align with navbar height */
+  top: 20px;
   width: fit-content;
   z-index: 200;
 }
@@ -503,7 +504,6 @@ footer {
     text-decoration: underline;  
   }
 }
-
 /* IGV styling */
 #igv-container {
   border: 0.5px solid rgba(0, 0, 0, 0.50);
